# weak_lensing

./: .gitignore  1024.ipynb  CMakeLists.txt  README.md  cmake_settings_template.txt  delta_vector.cpp  delta_vector.hpp  euclid.ipynb  euclid_bin1.ipynb  fftw_test.cpp  la3_derivs.ipynb  lbfgs_1d.cpp  lbfgs_2d.cpp  lbfgs_2d.ipynb  lbfgs_3d.cpp  lbfgs_3d.ipynb  lbfgs_test.ipynb  lin_2d.ipynb  lin_alg.cpp  lin_alg.hpp  lin_lbfgs_2d.cpp  lin_lbfgs_3d.cpp  lin_mod.ipynb  lyman_alpha.cpp  lyman_alpha.hpp  masks.ipynb  notes.ipynb  params_la  params_lin2d.example  plots_videos.ipynb  power_spectrum.cpp  power_spectrum.hpp  shear_shear.cpp  simple_1d.cpp  test.ipynb  test_lyman_alpha.cpp  test_lyman_alpha2.cpp  test_lyman_alpha3.cpp  test_power_spectrum.cpp  test_power_spectrum.ipynb  (+2 more)
masks/: mask_grid.txt  mask_irr.txt  mask_maker.ipynb  mask_rec.txt  mask_star512.txt  mask_wfr.txt  stellar_like.ipynb
